--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     color:#786079;
   }
 </style>
-<title>Kaeden</title>
-<h1>
+<head><title>Kaeden</title></head>
+<body>
+  <h1>
 Kaeden Mills
 </h1>
-<body>
+  <a href="ECS_HTML/index.html">ECS HTML Project</a>
 <p>
   This movie is about a guy named Guy living a i computer game, unknowing they are in a computer game. His world is about to end and needs to get to a invisable island to prove the game designer stole code so they can keep the game running. Along the way he needed to find a in game document that proved that there could be a island with the prof they need to keep the game running. This whole movie is about a court case between the desinger of the stolen code and Suunami, the company that stole the code.
 </p>
